# qaguru_python_4_api_tests

./: .env  .gitignore  conftest.py  pyproject.toml  pytest.ini
allure-results/: a4314cbe-6a2b-4d91-a8e3-78145fb52d93-container.json  bc27ef12-753d-4f0d-9c29-71296bd51cbd-result.json
model/: demoshop.py
schemas/: cats.py  reqresin.py
tests/: test_cats.py  test_demoqa.py  test_reqres.py  test_ui.py
tests/allure-results/: 33059f6e-a307-42b4-a959-739963d2ba1d-result.json  43484541-ba42-4dad-a34d-ab25e0ac520d-container.json
utils/: helper.py
